[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/scenes/Mapa entero/Level 1.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/Mapa entero/Level 2.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/escalera_abajo.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Mapa entero/Level 3.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/Mapa entero/Level 4.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/PickUps/Rose.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/PickUps/Llave.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/Mapa entero/Level 5.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/light/ambient_light.png" type="Texture" id=9]
[ext_resource path="res://assets/AssetsFinals/Fire/RedFire.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scenes/Escalera 3/escalera_abajo_3.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/AssetsFinals/Sonido/pc-acert.wav" type="AudioStream" id=12]
[ext_resource path="res://src/endScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/scenes/Escalera 2/escalera_abajo_2.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/scenes/Escalera 4/escalera_abajo_4.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/actors/Fila.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/Camera/GridSnaper.tscn" type="PackedScene" id=26]
[ext_resource path="res://src/scenes/Mapa entero/EntireMap.gd" type="Script" id=27]
[ext_resource path="res://src/Collisions/ColStairs.tscn" type="PackedScene" id=36]
[ext_resource path="res://src/scenes/deadScreen.tscn" type="PackedScene" id=37]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9.67589 )

[node name="EntireMap" type="Node2D"]
script = ExtResource( 27 )

[node name="Level 1" parent="." instance=ExtResource( 1 )]

[node name="Terminal" parent="Level 1/Middle/TerminalCompleta" index="1"]
solution = "You should watch your back, there are monsters hiding in the dark and they really like little kids..."

[node name="Enemy" parent="Level 1" index="3"]
position = Vector2( 635.769, 437.331 )

[node name="Stairs 1" type="Node2D" parent="."]
position = Vector2( 0, -576 )

[node name="Stairs" parent="Stairs 1" instance=ExtResource( 3 )]

[node name="ColStairs" parent="Stairs 1" instance=ExtResource( 36 )]

[node name="Level 2" parent="." instance=ExtResource( 2 )]

[node name="Terminal" parent="Level 2/Middle/TerminalCompleta" index="1"]
solution = "Gonzalo: genius of war, man ready to fight, genius of combat."

[node name="Base" parent="Level 2" index="8"]
position = Vector2( 808.298, 496.281 )

[node name="Enemy" parent="Level 2" index="9"]
position = Vector2( 815.33, 515.62 )

[node name="CollisionShape2D" parent="Level 2/Area2D" index="0"]
position = Vector2( 507.005, 440.805 )

[node name="Stairs 2" type="Node2D" parent="."]
position = Vector2( 0, -1728 )

[node name="Stairs" parent="Stairs 2" instance=ExtResource( 14 )]

[node name="ColStairs" parent="Stairs 2" instance=ExtResource( 36 )]

[node name="Level 3" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -2303 )

[node name="Terminal" parent="Level 3/Node2D/TerminalCompleta" index="1"]
solution = "Karl Friedrich von Gaertner was a well-known German botanist, and the son of Joseph Gaertner."

[node name="Stairs 3" type="Node2D" parent="."]
position = Vector2( 0, -2880 )

[node name="Stairs" parent="Stairs 3" instance=ExtResource( 11 )]

[node name="ColStairs" parent="Stairs 3" instance=ExtResource( 36 )]

[node name="Level 4" parent="." instance=ExtResource( 5 )]

[node name="Terminal" parent="Level 4/Node2D/TerminalCompleta" index="1"]
solution = "What would happen if we put two consciences in a program, endowed with all the existing human information. to talk about an absolute truth? Well, the result is introduced by the ass to a dead animal to create a supreme entity."

[node name="Password" parent="Level 4/Node2D/TerminalCompleta" index="2"]
solution = "1714"

[node name="Portal1" parent="Level 4" index="12"]
monitorable = false

[node name="Portal2" parent="Level 4" index="13"]
position = Vector2( 2037.57, 440.142 )
monitorable = false
collision_layer = 0

[node name="Stairs 4" type="Node2D" parent="."]
position = Vector2( 0, -4032 )

[node name="Stairs" parent="Stairs 4" instance=ExtResource( 19 )]

[node name="ColStairs" parent="Stairs 4" instance=ExtResource( 36 )]

[node name="Level 5" parent="." instance=ExtResource( 8 )]

[node name="Terminal" parent="Level 5/Middle/TerminalCompleta" index="1"]
solution = "Elder sister vomits blood, younger sister's breathing fire, while sweet little Tomino just spits up the jewels. All alone does Tomino go falling into that hell, a hell of utter darkness, without even flowers.Is Tomino's big sister the one who whips him? "

[node name="Fila" parent="." instance=ExtResource( 23 )]

[node name="Prota" parent="Fila" index="0"]
position = Vector2( 518.108, 563.323 )

[node name="pointLight" parent="Fila/Prota" index="6"]
position = Vector2( 17.6591, -32.5704 )

[node name="GridSnaper" parent="." instance=ExtResource( 26 )]
z_index = 600

[node name="DeathScreen" parent="GridSnaper" instance=ExtResource( 37 )]
visible = false

[node name="Spawn" type="Node2D" parent="."]
position = Vector2( 520.394, 536.217 )

[node name="PickUps" type="Node2D" parent="."]

[node name="Rose" parent="PickUps" instance=ExtResource( 6 )]

[node name="Key" parent="PickUps" instance=ExtResource( 7 )]

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( 1562.3, -864.911 )
scale = Vector2( 8.12111, 4.55423 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 1544.18, -292.928 )
scale = Vector2( 8.12111, 4.55423 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D3" type="Light2D" parent="Lights"]
position = Vector2( -515.654, -863.345 )
scale = Vector2( 7.75071, 4.55423 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D5" type="Light2D" parent="Lights"]
position = Vector2( -511, -2004.47 )
scale = Vector2( 8.0189, 4.65058 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D7" type="Light2D" parent="Lights"]
position = Vector2( 1533.5, -2007.4 )
rotation = -0.000626419
scale = Vector2( 7.99071, 4.63423 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D8" type="Light2D" parent="Lights"]
position = Vector2( 1532.59, -3161.9 )
rotation = -0.000626419
scale = Vector2( 7.99071, 4.63423 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D9" type="Light2D" parent="Lights"]
position = Vector2( -509.002, -3161.9 )
rotation = -0.000626419
scale = Vector2( 7.99071, 4.63423 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="Light2D4" type="Light2D" parent="Lights"]
position = Vector2( 512.491, -2598.67 )
scale = Vector2( -7.97504, 22.4158 )
texture = ExtResource( 9 )
mode = 1
range_z_max = 100

[node name="TurnOffPlayerLight" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 510.988, -565.252 )
scale = Vector2( 8.08, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 522.946, -1194.26 )
scale = Vector2( 8.08, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 527.73, -1703.68 )
scale = Vector2( 8.08, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 530.121, -2320.73 )
scale = Vector2( 8.08, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 532.513, -2851.67 )
scale = Vector2( 8.08, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 472.722, -3442.41 )
scale = Vector2( 8.08, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( -1195.07, -1798.95 )
rotation = -1.59087
scale = Vector2( -7.93691, 6.68191 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 2206.04, -3024.14 )
rotation = -1.59087
scale = Vector2( 13.7481, 14.0395 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="TurnOffPlayerLight"]
position = Vector2( 513.241, -4058.7 )
rotation = -0.0095228
scale = Vector2( 13.7481, 2.93233 )
shape = SubResource( 1 )

[node name="TurnOnPlayerLight2" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( -779.317, -1963.35 )
rotation = -1.59087
scale = Vector2( -7.93691, 11.7585 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( -783.418, -1965.4 )
rotation = -1.59087
scale = Vector2( -7.93691, 11.7585 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( 1823.27, -3121.42 )
rotation = -1.59087
scale = Vector2( 6.7749, 12.8934 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( 520.458, -2942.07 )
rotation = -1.59087
scale = Vector2( 6.7749, 12.8934 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( 520.458, -1803.33 )
rotation = -1.59087
scale = Vector2( 6.7749, 12.8934 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( 566.723, -2180.85 )
rotation = -1.59087
scale = Vector2( 6.7749, 12.8934 )
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( 515.243, -1036.85 )
rotation = -1.59087
scale = Vector2( 6.7749, 12.8934 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="TurnOnPlayerLight2"]
position = Vector2( 564.427, -3323.08 )
rotation = -1.59087
scale = Vector2( 6.7749, 12.8934 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedSprite" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 684.462, -16.3892 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite" index="0"]
scale = Vector2( -0.134253, 0.0941611 )
range_z_max = 200

[node name="AnimatedSprite3" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 702.043, -239.666 )

[node name="Light2D" parent="Node2D/AnimatedSprite3" index="0"]
range_z_max = 200

[node name="AnimatedSprite2" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1044.87, -2.32455 )

[node name="Light2D" parent="Node2D/AnimatedSprite2" index="0"]
position = Vector2( -85.5812, -39.2648 )
range_z_max = 200

[node name="AnimatedSprite4" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1020.26, -251.973 )

[node name="Light2D" parent="Node2D/AnimatedSprite4" index="0"]
range_z_max = 200

[node name="AnimatedSprite5" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1028.2, -1205.33 )

[node name="Light2D" parent="Node2D/AnimatedSprite5" index="0"]
color = Color( 0.0784314, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite8" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1011.85, -1381.6 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite8" index="0"]
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite7" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 703.193, -1387.26 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite7" index="0"]
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite9" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 685.148, -1214.01 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite9" index="0"]
position = Vector2( -81.5437, -37.3652 )
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite10" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 671.906, -2340.46 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite10" index="0"]
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite11" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 699.867, -2604.09 )
frame = 2

[node name="Light2D" parent="Node2D/AnimatedSprite11" index="0"]
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite12" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1019.43, -2608.09 )
frame = 2

[node name="Light2D" parent="Node2D/AnimatedSprite12" index="0"]
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite14" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1079.34, -2356.43 )

[node name="Light2D" parent="Node2D/AnimatedSprite14" index="0"]
position = Vector2( -85.5812, -40.5552 )
color = Color( 0.290196, 1, 0, 1 )
range_z_max = 200

[node name="AnimatedSprite15" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1045.86, -3444.63 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite15" index="0"]
position = Vector2( -85.5812, -40.5552 )
color = Color( 0.411765, 0, 0.784314, 1 )
range_z_max = 200

[node name="AnimatedSprite17" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1033.9, -3671.84 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite17" index="0"]
position = Vector2( -85.5812, -40.5552 )
color = Color( 0.411765, 0, 0.784314, 1 )
range_z_max = 200

[node name="AnimatedSprite18" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 682.325, -3666.51 )
frame = 2

[node name="Light2D" parent="Node2D/AnimatedSprite18" index="0"]
position = Vector2( -85.5812, -40.5552 )
color = Color( 0.411765, 0, 0.784314, 1 )
range_z_max = 200

[node name="AnimatedSprite16" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 670.367, -3432.67 )
frame = 3

[node name="Light2D" parent="Node2D/AnimatedSprite16" index="0"]
position = Vector2( -85.5812, -40.5552 )
color = Color( 0.411765, 0, 0.784314, 1 )
range_z_max = 200

[node name="LevelDone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="EndScreen" parent="." instance=ExtResource( 13 )]
position = Vector2( 0, -5184 )
[connection signal="terminal1Solved" from="Level 1" to="." method="_on_Level_1_terminal1Solved"]
[connection signal="killedChildren" from="Level 1/Enemy" to="." method="_on_Enemy_killedChildren"]
[connection signal="terminal2Solved" from="Level 2" to="." method="_on_Level_2_terminal2Solved"]
[connection signal="killedChildren" from="Level 2/Enemy" to="." method="_on_Enemy_killedChildren"]
[connection signal="terminal3Solved" from="Level 3" to="." method="_on_Level_3_terminal3Solved"]
[connection signal="killedChildren" from="Level 3/Enemy" to="." method="_on_Enemy_killedChildren"]
[connection signal="terminal4Solved" from="Level 4" to="." method="_on_Level_4_terminal4Solved"]
[connection signal="killedChildren" from="Level 4/Enemy" to="." method="_on_Enemy_killedChildren"]
[connection signal="terminal5Solved" from="Level 5" to="." method="_on_Level_5_terminal5Solved"]
[connection signal="killedChildren" from="Level 5/Enemy" to="." method="_on_Enemy_killedChildren"]
[connection signal="ded" from="Fila" to="." method="_on_Fila_ded"]
[connection signal="protaCaught" from="Fila/Prota" to="." method="_on_Prota_protaCaught"]
[connection signal="respawn" from="GridSnaper/DeathScreen" to="." method="_on_DeathScreen_respawn"]
[connection signal="rosePicked" from="PickUps/Rose" to="." method="_on_Rose_rosePicked"]
[connection signal="keyPicked" from="PickUps/Key" to="." method="_on_Key_keyPicked"]
[connection signal="area_entered" from="TurnOffPlayerLight" to="." method="_on_TurnOffPlayerLight_area_entered"]
[connection signal="area_entered" from="TurnOnPlayerLight2" to="." method="_on_TurnOnPlayerLight2_area_entered"]

[editable path="Level 1"]

[editable path="Level 1/Middle"]

[editable path="Level 1/Middle/TerminalCompleta"]

[editable path="Level 2"]

[editable path="Level 2/Middle"]

[editable path="Level 2/Middle/TerminalCompleta"]

[editable path="Level 2/Middle/TerminalCompleta/Terminal"]

[editable path="Level 2/ColRight"]

[editable path="Level 3"]

[editable path="Level 3/Node2D"]

[editable path="Level 3/Node2D/TerminalCompleta"]

[editable path="Level 4"]

[editable path="Level 4/Node2D"]

[editable path="Level 4/Node2D/TerminalCompleta"]

[editable path="Level 5"]

[editable path="Level 5/Middle"]

[editable path="Level 5/Middle/TerminalCompleta"]

[editable path="Fila"]

[editable path="Fila/Prota"]

[editable path="PickUps/Rose"]

[editable path="PickUps/Key"]

[editable path="Node2D/AnimatedSprite"]

[editable path="Node2D/AnimatedSprite3"]

[editable path="Node2D/AnimatedSprite2"]

[editable path="Node2D/AnimatedSprite4"]

[editable path="Node2D/AnimatedSprite5"]

[editable path="Node2D/AnimatedSprite8"]

[editable path="Node2D/AnimatedSprite7"]

[editable path="Node2D/AnimatedSprite9"]

[editable path="Node2D/AnimatedSprite10"]

[editable path="Node2D/AnimatedSprite11"]

[editable path="Node2D/AnimatedSprite12"]

[editable path="Node2D/AnimatedSprite14"]

[editable path="Node2D/AnimatedSprite15"]

[editable path="Node2D/AnimatedSprite17"]

[editable path="Node2D/AnimatedSprite18"]

[editable path="Node2D/AnimatedSprite16"]
